# OH4VNA

./: .env.example  .gitignore  README.md  TRANSFER_GUIDE.md  app.py  pyproject.toml  setup.ps1  setup.sh
.github/: copilot-context.md  copilot-instructions.md
configs/: settings.example.yaml
data/metadata/calibration_kits/perfect-osl/: kit.json
data/metadata/calibration_kits/perfect-osl/MCK4OH_SN0000_20251021/: load.s1p  open.s1p  short.s1p
emulator/: 20251201_OH4VNA Emulator Report_RF.docx  MACP-011045-Sparam-corrected.pptx  OH4VNA_emulator.py  Swap_Sparam_Nport_XtoY.py  dut_gamma_arrays.csv  vna_s21_DUT1-6.csv
emulator/Datasheet_Info/: S11_digitized.txt  S21_digitized.txt  S22_digitized.txt  S31_digitized.txt  S33_digitized.txt  S41_digitized.txt
emulator/Sprams MACP-011045/: MACP-011045_02.S4P  MACP-011045_12.S4P  MACP-011045_17.S4P
emulator/Sprams MACP-011045_corrected/: MACP-011045_02_corrected.s4p  MACP-011045_12_corrected.s4p  MACP-011045_17_corrected.s4p
inventory/calibration_kits/MCK4OH_SN0000_20251022/: MCK4OH_SN0000_20251022_L.s1p  MCK4OH_SN0000_20251022_O.s1p  MCK4OH_SN0000_20251022_S.s1p
notebooks/: 01_basic_measurement.ipynb
oh4vna/: __init__.py  config.py
oh4vna/data/: __init__.py  models.py  repository.py
oh4vna/instrument/: __init__.py  base.py  rohde_schwarz.py  simulation.py
oh4vna/services/: __init__.py  calibration.py  instrument_manager.py  measurement.py
